Changes in bottom sheet layout, added some fixes & missing files

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,4 +87,6 @@
     <string name="set_main_folder">Set main folder</string>
     <string name="cover_desc">Okładka albumu</string>
     <string name="more">Więcej</string>
+    <string name="no_music_text">No music selected</string>
+    <string name="close">Zamknij teraz odtwarzane</string>
 </resources>
